--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Interactive 3D Boids Simulation demonstrating emergent flocking behavior using Three.js" />
+  <meta name="keywords" content="boids, flocking, simulation, three.js, webgl, 3D" />
+  <meta name="author" content="Simone Scheuer" />
+  <meta property="og:title" content="3D Boids Simulation" />
+  <meta property="og:description" content="Interactive 3D simulation of flocking behavior" />
+  <meta property="og:type" content="website" />
   <title>3D Boids Simulation</title>
+  <link rel="stylesheet" href="/src/index.css">
 </head>
 
 <body>
